[#146] using flexbox to fix layout issues with the "new game"/"tweet your score" buttons

--- a/src/sass/_leaderboard-yeti.scss
+++ b/src/sass/_leaderboard-yeti.scss
@@ -28,6 +28,7 @@
 	color: get-color( "white" );
 	display: inline-block;
 	font-size: 0.8rem;
+	line-height: 1.1;
     margin: 30px 10px 20px;
     padding: 7px;
 	text-decoration: none;
